[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/leveleditor/EditLayerDialog.gd" type="Script" id=1]

[node name="EditLayerDialog" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 392.0
margin_top = 166.0
margin_right = -392.0
margin_bottom = -166.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 10.0
margin_right = -9.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 478.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Edit Layer..."
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 478.0
margin_bottom = 55.0

[node name="SpaceFiller" type="Control" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 478.0
margin_bottom = 288.0
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 478.0
margin_bottom = 322.0

[node name="ConfirmEditLayer" type="Button" parent="VBoxContainer"]
margin_top = 326.0
margin_right = 478.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 42 )
text = "OK"

[connection signal="about_to_show" from="." to="." method="_on_EditLayerDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_EditLayerDialog_popup_hide"]
[connection signal="pressed" from="VBoxContainer/ConfirmEditLayer" to="." method="_on_ConfirmEditLayer_pressed"]
